--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,10 +1,1 @@
-@import "../less/fonts.less";
-@import "../less/global.less";
-@import "../less/main-nav.less";
-@import "../less/main-header.less";
-@import "../less/main-container.less";
-@import "../less/benefits.less";
-@import "../less/advantages.less";
-@import "../less/variables.less";
-@import "../less/interested.less";
-@import "../less/main-footer.less";
+// Начните писать стили здесь
